--- a/index.html
+++ b/index.html
@@ -11,33 +11,42 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/c49afec75b.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
-      <img src="images/logo.svg" alt="Huddle logo" />
-    </header>
+    <div class="container">
+      <header>
+        <img src="images/logo.svg" alt="Huddle logo" />
+      </header>
 
-    <section class="content">
-      <div class="img-container">
-        <img src="images/illustration-mockups.svg" alt="mockups" />
-      </div>
-      <div class="text-container">
-        <h1>Build The Community Your Fans Will Love</h1>
-        <p>
-          Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create
-          connections with your users as you engage in genuine discussion.
-        </p>
-        <button>Register</button>
-      </div>
-    </section>
+      <section class="content">
+        <div class="img-container">
+          <img src="images/illustration-mockups.svg" alt="mockups" />
+        </div>
+        <div class="text-container">
+          <h1>
+            Build The Community
+            <br />
+            Your Fans Will Love
+          </h1>
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create
+            connections with your users as you engage in genuine discussion.
+          </p>
+          <button>Register</button>
+        </div>
+      </section>
 
-    <footer>
-      <i class="fa-brands fa-facebook"></i>
-      <i class="fa-brands fa-twitter"></i>
-      <i class="fa-brands fa-instagram"></i>
-    </footer>
+      <footer>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+      </footer>
+    </div>
   </body>
 </html>
